Fix word wrap on output

--- a/static/css/sandbox.css
+++ b/static/css/sandbox.css
@@ -98,8 +98,8 @@ input[type="text"]
 
 #output
 {
-  white-space: pre;
-  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-wrap: normal;
   border-radius: 3px;
   border: 1px solid #ccc;
   padding: 16px;
